src/parse/snapshots/script_lang__parse__test__r#loop__break_after_inner.snap
---
source: src/parse/test.rs
assertion_line: 234
expression: ast

---
Loop(
    Block {
        stmts: [
            Loop(
                Block {
                    stmts: [],
                    span: Span {
                        start: 0,
                        end: 0,
                    },
                },
                Span {
                    start: 0,
                    end: 0,
                },
            ),
            Break(
                Span {
                    start: 0,
                    end: 0,
                },
            ),
        ],
        span: Span {
            start: 0,
            end: 0,
        },
    },
    Span {
        start: 0,
        end: 0,
    },
)
