src/parse/snapshots/script_lang__parse__test__r#loop__empty.snap
---
source: src/parse/test.rs
assertion_line: 218
expression: ast

---
Loop(
    Block {
        stmts: [],
        span: Span {
            start: 0,
            end: 0,
        },
    },
    Span {
        start: 0,
        end: 0,
    },
)
