src/parse/snapshots/script_lang__parse__test__r#loop__with_break.snap
---
source: src/parse/test.rs
assertion_line: 225
expression: ast

---
Loop(
    Block {
        stmts: [
            Break(
                Span {
                    start: 0,
                    end: 0,
                },
            ),
        ],
        span: Span {
            start: 0,
            end: 0,
        },
    },
    Span {
        start: 0,
        end: 0,
    },
)
